# software-factory

./: .coverage  .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.de.md  CODE_OF_CONDUCT.es.md  CODE_OF_CONDUCT.fr.md  CODE_OF_CONDUCT.ja.md  CODE_OF_CONDUCT.ko.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.pt.md  CODE_OF_CONDUCT.zh-CN.md  CONTRIBUTING.de.md  CONTRIBUTING.es.md  CONTRIBUTING.fr.md  CONTRIBUTING.ja.md  CONTRIBUTING.ko.md  CONTRIBUTING.md  CONTRIBUTING.pt.md  CONTRIBUTING.zh-CN.md  Dockerfile  Dockerfile.platform  Dockerfile.project.node  Dockerfile.project.python  Dockerfile.project.rust  Dockerfile.sf  FINAL_STEPS.md  LICENSE  Makefile  README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  (+47 more)
_FINARY/backend/: Cargo.toml  api_server.py  history_manager.py  insights_engine.py
_FINARY/backend/migrations/: 001_initial_schema.sql  002_seed_fixture_data.sql
_FINARY/backend/src/: db.rs  main.rs  models.rs  services.rs
_FINARY/scrapers/: .env.example  BROWSER.md  __init__.py  base.py  build_patrimoine.py  categorizer.py  config.py  daily_sync.py  keep_alive.py  launch_browser.sh  models.py  parse_transactions.py  pyproject.toml  requirements.txt  run_scrape.py  scheduler.py  scrape_all.py  scrape_cdp.py  scrape_cdp_v2.py  scrape_details.py  scrape_final.py  scrape_loan_details.py  scrape_transactions.py  session_keepalive.py
_FINARY/scrapers/analytics/: __init__.py  diversification.py  dividends.py  fees.py  performance.py  risk.py  simulation.py
_FINARY/scrapers/boursobank/: __init__.py  scraper.py
_FINARY/scrapers/credit_agricole/: __init__.py  scraper.py
_FINARY/scrapers/data/: all_banks_deep_2026-02-09.json  bourso_deep_2026-02-09.json  bourso_deep_2026-02-13.json  bourso_export.csv  bourso_loans_raw.json  boursobank_2026-02-09.json  boursobank_2026-02-10.json  boursobank_2026-02-13.json  ca_credits_raw.json  ca_deep_2026-02-09.json  ca_deep_2026-02-10.json  ca_deep_2026-02-13.json  ca_export.csv  credit_agricole_2026-02-09.json  credit_agricole_2026-02-10.json  credit_agricole_2026-02-13.json  extraction_complete_2026-02-09.json  extraction_complete_2026-02-10.json  extraction_complete_2026-02-13.json  finary.duckdb  ibkr_2026-02-09.json  ibkr_2026-02-10.json  ibkr_2026-02-13.json  ibkr_activity_2025.csv  ibkr_deep_2026-02-09.json  patrimoine_complet_2026-02-09.json  patrimoine_complet_2026-02-10.json  patrimoine_complet_2026-02-13.json  patrimoine_consolide_2026-02-09.json  sync_log_2026-02-13.txt  tr_missing_positions_2026-02-09.json  tr_transactions_raw.txt  trade_republic_2026-02-09.json  trade_republic_2026-02-10.json  trade_republic_2026-02-13.json  trade_republic_deep_2026-02-09.json  trade_republic_deep_2026-02-10.json  transactions.duckdb
_FINARY/scrapers/ibkr/: __init__.py  scraper.py
_FINARY/scrapers/market_data/: __init__.py  ecb_provider.py  finnhub_provider.py  isin_resolver.py  portfolio_valuation.py  yfinance_provider.py
_FINARY/scrapers/tests/: conftest.py  test_boursobank_utils.py  test_categorizer.py  test_credit_agricole_utils.py  test_diversification.py  test_dividends.py  test_ecb_provider.py  test_fees.py  test_ibkr.py  (+7 more)
(+6316 files in other folders)
