[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "software-factory"
version = "2.1.0"
description = "Multi-project Software Factory based on MIT CSAIL Recursive Language Models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Macaron Software", email = "dev@macaron.software"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "aiohttp>=3.8",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
pydantic = [
    "pydantic>=2.0",
]

[project.scripts]
factory = "cli.factory:main"

[project.urls]
Repository = "https://github.com/macaron-software/software-factory"

[tool.setuptools.packages.find]
include = ["core*", "mcp_lrm*", "cli*", "analyzers*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
